fix(image): fiz height prop in component and align design

--- a/src/components/image/image.scss
+++ b/src/components/image/image.scss
@@ -1,3 +1,10 @@
 :host {
-    display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $color-surface-3;
+
+  bds-illustration {
+    height: 76%;
+  }
 }
